--- a/src/App.scss
+++ b/src/App.scss
@@ -33,6 +33,7 @@ $generic-bg: #db4c3f;
 
 /* Mixins */
 @mixin box-overlay() {
+  -webkit-box-shadow: $generic-box-shadow;
   box-shadow: $generic-box-shadow;
   position: absolute;
   width: 100%;
@@ -42,12 +43,20 @@ $generic-bg: #db4c3f;
 }
 
 @mixin va($va-align: center) {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
   align-items: center;
 
   @if $va-align != center {
+    -webkit-box-pack: left;
+    -ms-flex-pack: left;
     justify-content: left;
   } @else {
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
   }
 }
@@ -55,8 +64,8 @@ $generic-bg: #db4c3f;
 @mixin no-select {
   -webkit-touch-callout: none;
   -webkit-user-select: none;
-  -khtml-user-select: none;
   -moz-user-select: none;
+  -ms-user-select: none;
   user-select: none;
 }
 
@@ -75,6 +84,7 @@ $generic-bg: #db4c3f;
   display: inline-block;
   white-space: nowrap;
   border-radius: 3px !important;
+  text-decoration: none !important;
   text-align: center;
   cursor: pointer;
 }
@@ -86,19 +96,27 @@ $generic-bg: #db4c3f;
   margin: 2px 5px;
 }
 
+@mixin transparent-button() {
+  background-color: transparent;
+  border: 0;
+}
+
 @mixin task-item() {
   list-style-type: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   line-height: 18px;
   color: #333;
   padding-top: 10px;
   padding-bottom: 10px;
   font-size: 14px;
+  list-style-type: none;
   border-bottom: 1px solid #f0f0f0;
   padding-left: 10px;
   cursor: pointer;
 
-  &.hover {
+  &:hover {
     background-color: #f9f9f9;
   }
 }
@@ -219,9 +237,6 @@ header {
   }
 
   li {
-    padding-left: 10px;
-    padding-right: 15px;
-
     &:hover .sidebar__project-delete {
       display: block;
     }
@@ -239,6 +254,7 @@ header {
         color: #cacaca;
       }
     }
+
     &.active, &:hover {
       font-weight: bold;
       background-color: white;
@@ -337,6 +353,7 @@ header {
       &.active, &:hover {
         font-weight: bold;
         background-color: white;
+        cursor: pointer;
       }
     }
   }
@@ -367,6 +384,7 @@ header {
     button {
       @include btn('50px');
     }
+
     span {
       @include cancel();
       font-weight: normal;
@@ -452,3 +470,170 @@ header {
     }
   }
 }
+
+/* Add Task
+  ============================================ */
+.add-task {
+
+  &__overlay {
+    background: rgba(102, 102, 102, 0.5);
+    position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 2000;
+    transition: opacity 0.2s ease-in;
+    height: calc(100vh);
+
+    .add-task-main {
+      overflow: visible;
+      margin-bottom: 20px;
+      margin-top: 55px;
+      border-radius: 5px;
+      background-color: white;
+      position: absolute;
+      left: 50%;
+      top: 50%;
+      padding: 20px 30px;
+      transform: translate(-50%, -50%);
+
+      .header {
+        font-size: 13px;
+        margin-bottom: 20px;
+        float: left;
+      }
+    }
+
+    .add-task__cancel-x {
+      cursor: pointer;
+      color: gray;
+      float: right;
+      font-weight: bold;
+      font-size: 12px;
+      margin-top: 10px;
+    }
+  }
+
+  &__main {
+    position: relative;
+  }
+
+  &__project, &__date {
+    cursor: pointer;
+    float: right;
+    color: gray;
+    margin: 20px 10px;
+  }
+
+  &__project {
+    margin-right: 0;
+  }
+
+  &__content {
+    width: 100%;
+    border: 1px solid #ddd;
+    background-color: white !important;
+    border-radius: 3px;
+    height: 35px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  &__cancel, &__submit {
+    @include no-select;
+  }
+
+  &__cancel {
+    @include cancel();
+  }
+
+  &__submit {
+    @include btn(90px);
+  }
+}
+
+.add-task__shallow, .add-project {
+  @include no-select;
+  cursor: pointer;
+  margin-bottom: 20px;
+}
+
+.add-task__plus, .add-project__plus {
+  color: #dd4b39;
+  font-size: 18px;
+}
+
+.add-task__text, .add-project__text {
+  display: inline-block;
+  color: #545454;
+  font-size: 14px;
+  margin-left: 15px;
+}
+
+/* Task Date
+  ============================================ */
+.task-date {
+  @include box-overlay();
+  background-color: #fff;
+  width: 200px;
+  right: 0;
+
+  &__list li {
+    @include task-item();
+
+    span:first-of-type {
+      margin-right: 10px;
+
+      svg {
+        fill: gray;
+      }
+    }
+  }
+}
+
+/* Project Overlay
+  ============================================ */
+.project-overlay {
+  @include box-overlay();
+  background-color: white;
+
+  &__list li {
+    @include task-item();
+  }
+}
+
+/* Add Project
+  ============================================ */
+
+.add-project {
+  padding-left: 13px;
+  padding-right: 20px;
+  margin-top: 20px;
+
+  &__input {
+    margin-bottom: 20px;
+  }
+
+  &__name {
+    width: 100%;
+    border: 1px solid #ddd;
+    border-radius: 3px;
+    height: 35px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+
+  &__submit {
+    @include btn(100px);
+  }
+
+  &__cancel {
+    @include cancel();
+  }
+}
+
+
+
+
